2.3.1   - Shifted audit log calls into a separate routine.
        - Fixed audit tag colour for prioritise action.
2.3.0   - Fixed a bug where the D-Shell process would die if the SSH connection suddenly closed after previously 
          being open during the initial connection phase, including during a controlled reboot.
        - Fixed an issue where a random SSH termination wasn't correctly handled by the CDSF distribution process.
        - Restored the previous Command Set ownership model from before 2.0.2 as the main reason for hidden commands 
          (possible embedded private data in a Command Set) has been superseded by the functions provided by *VAR.
        - Added better handing for mid-login errors during D-Shell SSH initialisation.
        - Changed the naming of IP allocations to IP assignments for compatibility with RIPE definitions.
        - Reduced value length from 45 to 18 for IP blocks in assignment DB.
        - Introduced IPv6 assignment system.
        - Changed snapshot delete CLI tag from -r to -d to reduce the risk of mixing up with -R (restore).
        - Implemented Job queuing system.
2.2.1   - Fixed an issue with the IP allocation system reporting the wrong block when full.
        - Removed taint requirement from locally executed only scripts.
        - Fixed missing formatting for variables in Command Sets.
        - Added minor username tag for snapshot tracking.
        - Fixed a bug related to correctly capturing hashes where the key or value ended in '='.
        - Fixed some block size display issues for /32 blocks. (now correctly uses parent block for some values).
        - Fixed an issue passing multi-line variables when using a Windows based browser.
        - Added some logic to determine if a system is a VM before performing a snapshot operation.
        - Fixed some missing audit colours and standardised CSS colour names.